----------------------
* ModificationSet is now pluggable. Defaults to the standard modification set, but a different implementation could be specified in your config.xml, so long as it extends ModificationSet. Thanks to Mike Royal, via Mike Mason.
* 'pause' and 'maven' are now registered by default
* Schedule is now pluggable.
* bootstrapper, log, and publishers are no longer required elements.

PVCS
----------------------
* Fixed bug with UNC share paths - Patch by Dan Rollo
* Added pvcsbin attribute for when pvcs is not on the path - Patch by Dan Rollo

Schedule
----------------------
* Fixed a bug where a time builder wouldn't run if the time of the last build on the previous day was later than the time of the time builder. - Patch by Jeffrey Fredrick
* Fixed a bug where a time builder wouldn't run if the time was set to midnight. - Patch by Richard Lewis-Shell
* 'interval' now optional; defaults to 300 (five minutes)
* will complain if there isn't at least one nested builder element

StreamPumper & StreamConsumer
---------------------
* StreamConsumer implementations may now be registered with StreamPumpers to notified for each line "pumped".

VSS
----------------------
* Fixed issues with label entries, files added or deleted in root directory, branching, and sharing. - Patch by Matt Stave

XSLTag
----------------------
* Fixed a bug where using an unexpanded WAR file caused a NullPointerException.
* Added "xslRootContext" property, so that nested stylesheets know where the default directory is.


CruiseControl Release Notes - 2.0.2

JMX/PROJECT CONTROLLER
----------------------
* Added ability to force a rebuild via ProjectController (and effectivly JMX) Patch by Dominick Bellizzi. An implementation note. If project is in state "PAUSED" it won't force the build until you command "RESUME", but then it will emediatly start building.


PROJECT
----------------------